Added getUsers and deleteUser functionallity

--- a/DocuSign/DocuSign.csproj
+++ b/DocuSign/DocuSign.csproj
@@ -15,8 +15,10 @@
 
   <ItemGroup>
     <None Remove="Controllers\" />
+    <None Remove="DAL\Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="DAL\Interfaces\" />
   </ItemGroup>
 </Project>
