Added validations to ther equests

--- a/DocuSign/DocuSign.csproj
+++ b/DocuSign/DocuSign.csproj
@@ -16,9 +16,11 @@
   <ItemGroup>
     <None Remove="Controllers\" />
     <None Remove="DAL\Interfaces\" />
+    <None Remove="ExceptionHandler\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="DAL\Interfaces\" />
+    <Folder Include="ExceptionHandler\" />
   </ItemGroup>
 </Project>
