Added layers to the project

--- a/DocuSign/DocuSign.Api.csproj
+++ b/DocuSign/DocuSign.Api.csproj
@@ -15,10 +15,16 @@
 
   <ItemGroup>
     <None Remove="Controllers\" />
-    <None Remove="ExceptionHandler\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="ExceptionHandler\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\BL\BL.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
