Renamed projects' names

--- a/DocuSign/DocuSign.Api.csproj
+++ b/DocuSign/DocuSign.Api.csproj
@@ -15,9 +15,13 @@
 
   <ItemGroup>
     <None Remove="Controllers\" />
+    <None Remove="Middleware\" />
+    <None Remove="Controllers\Filters\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Middleware\" />
+    <Folder Include="Controllers\Filters\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
