--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -10,10 +10,12 @@
     <None Remove="Models\" />
     <None Remove="Interfaces\" />
     <None Remove="Exceptions\" />
+    <None Remove="Constants\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Constants\" />
   </ItemGroup>
 </Project>
